<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="osirisnet.mystudytracking.UI.fragments.Fragment_EditNote">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEditNoteTit"
            android:text="@string/Text_EditNote_Titulo" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="31dp">

            <TextView
                android:text="@string/Text_EditNote_Materia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEdiNtoteMat"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerMateria" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Text_EditNote_Fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEditNoteFecha"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editTextFecha"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Text_EditNote_Hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEditNoteHora"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/EditTextHora" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <TextView
                android:text="@string/Text_EditNote_Tipo_Evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEditNoteTipoEvento"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerTipoEvento" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
